{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 25,
  "lineage": "b21e5e00-f945-afd1-5f17-35340222838c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a64503f28150e25",
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:elastic-ip/eipalloc-07a64503f28150e25",
            "domain": "vpc",
            "id": "eipalloc-07a64503f28150e25",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-205-133.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.205.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a29dccf323333915",
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:elastic-ip/eipalloc-0a29dccf323333915",
            "domain": "vpc",
            "id": "eipalloc-0a29dccf323333915",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-197-64.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.197.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:internet-gateway/igw-031447855e43059b3",
            "id": "igw-031447855e43059b3",
            "owner_id": "191469554625",
            "tags": {
              "Name": "pj_igw"
            },
            "tags_all": {
              "Name": "pj_igw"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a64503f28150e25",
            "association_id": "eipassoc-0505fc9ab83af4391",
            "connectivity_type": "public",
            "id": "nat-0a180dcb7ab9d6a5e",
            "network_interface_id": "eni-0ca8d1f51d19e7b42",
            "private_ip": "10.0.0.186",
            "public_ip": "15.164.205.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fa5db911c9c0503",
            "tags": {
              "Name": "pj_NATGW_2a"
            },
            "tags_all": {
              "Name": "pj_NATGW_2a"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a29dccf323333915",
            "association_id": "eipassoc-0c139e329edd554f8",
            "connectivity_type": "public",
            "id": "nat-02aac286b1ef16f31",
            "network_interface_id": "eni-0afb6f41e69c085ca",
            "private_ip": "10.0.1.204",
            "public_ip": "3.36.197.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01937671ff36116b6",
            "tags": {
              "Name": "pj_NATGW_2c"
            },
            "tags_all": {
              "Name": "pj_NATGW_2c"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-0fdfbe756b444dfd6",
            "id": "rtb-0fdfbe756b444dfd6",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_private_rt_2a_1"
            },
            "tags_all": {
              "Name": "pj_private_rt_2a_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-039f2dfe5bab4df31",
            "id": "rtb-039f2dfe5bab4df31",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_private_rt_2c_1"
            },
            "tags_all": {
              "Name": "pj_private_rt_2c_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-0dab1cfa5c4924448",
            "id": "rtb-0dab1cfa5c4924448",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_private_rt_2a_2"
            },
            "tags_all": {
              "Name": "pj_private_rt_2a_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-0ecaa430f90e57485",
            "id": "rtb-0ecaa430f90e57485",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_private_rt_2c_2"
            },
            "tags_all": {
              "Name": "pj_private_rt_2c_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-0b90b9fbe4b832fec",
            "id": "rtb-0b90b9fbe4b832fec",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_public_rt_2a"
            },
            "tags_all": {
              "Name": "pj_public_rt_2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:route-table/rtb-0a5090d70f898c855",
            "id": "rtb-0a5090d70f898c855",
            "owner_id": "191469554625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pj_public_rt_2c"
            },
            "tags_all": {
              "Name": "pj_public_rt_2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ac_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005d7a45f555f0d59",
            "route_table_id": "rtb-0fdfbe756b444dfd6",
            "subnet_id": "subnet-078ccd828bd83ec78"
          },
          "dependencies": [
            "aws_route_table.private_rt_1",
            "aws_subnet.private_1",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d28685a1b1b145b",
            "route_table_id": "rtb-039f2dfe5bab4df31",
            "subnet_id": "subnet-00bc52dc910630be2"
          },
          "dependencies": [
            "aws_route_table.private_rt_1",
            "aws_subnet.private_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ac_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ce2998c9b579a00",
            "route_table_id": "rtb-0dab1cfa5c4924448",
            "subnet_id": "subnet-0e6401db406672f19"
          },
          "dependencies": [
            "aws_route_table.private_rt_2",
            "aws_subnet.private_2",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaec9be3b7076714",
            "route_table_id": "rtb-0ecaa430f90e57485",
            "subnet_id": "subnet-004d2f2f814bc7a03"
          },
          "dependencies": [
            "aws_route_table.private_rt_2",
            "aws_subnet.private_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034229de4bb6626d3",
            "route_table_id": "rtb-0b90b9fbe4b832fec",
            "subnet_id": "subnet-07fa5db911c9c0503"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d59723cded171b",
            "route_table_id": "rtb-0a5090d70f898c855",
            "subnet_id": "subnet-01937671ff36116b6"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-078ccd828bd83ec78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078ccd828bd83ec78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_private_2a_1"
            },
            "tags_all": {
              "Name": "pj_private_2a_1"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-00bc52dc910630be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bc52dc910630be2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_private_2c_1"
            },
            "tags_all": {
              "Name": "pj_private_2c_1"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-0e6401db406672f19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6401db406672f19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_private_2a_2"
            },
            "tags_all": {
              "Name": "pj_private_2a_2"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-004d2f2f814bc7a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004d2f2f814bc7a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_private_2c_2"
            },
            "tags_all": {
              "Name": "pj_private_2c_2"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-07fa5db911c9c0503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa5db911c9c0503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_public_2a"
            },
            "tags_all": {
              "Name": "pj_public_2a"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:subnet/subnet-01937671ff36116b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01937671ff36116b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191469554625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pj_public_2c"
            },
            "tags_all": {
              "Name": "pj_public_2c"
            },
            "vpc_id": "vpc-0d9608684543995fe"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:191469554625:vpc/vpc-0d9608684543995fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006263dd3e0e6e9a6",
            "default_route_table_id": "rtb-0080f5dca10515709",
            "default_security_group_id": "sg-00f5bd67a6e59e79e",
            "dhcp_options_id": "dopt-0ab02de848452d248",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9608684543995fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0080f5dca10515709",
            "owner_id": "191469554625",
            "tags": {
              "Name": "pj_vpc"
            },
            "tags_all": {
              "Name": "pj_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}